--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,5 +6,6 @@
 
 body{
   background-color:#ffff;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
