--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,20 @@
 }
 .tabs {
   text-align: center;
-  width: 6%;
-  font-size: 12px;
+  width: 8%;
+  font-size: 14px;
   cursor: pointer;
-  color:#CBCBCB;
+  color:#000000;
   box-sizing: content-box;
   position: relative;
   outline: none;
+  font-weight: 700;
+  
 }
 
 .active-tabs {
-  border-bottom: 1px solid #CBCBCB;
+  border-bottom:3px solid #62AB4D;
+  color: #62AB4D;
 
 }
 
